[tool.poetry]
name = "code-flix"
version = "0.1.0"
description = ""
authors = ["elias-maciel <eliasfsilvamaciel@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
isort = "^6.0.0"
black = "^25.1.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.autoflake]
remove_all_unused_imports = true
remove_unused_variables = true
expand_star_imports = true

[tool.taskipy.tasks]
test = "pytest"
lint = "isort . & black . & autoflake --in-place ."
