[tool.poetry]
name = "code-flix"
version = "0.1.0"
description = ""
authors = ["elias-maciel <eliasfsilvamaciel@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
isort = "^6.0.0"
black = "^25.1.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
test = "pytest"
isort = "isort ."
black = "black ."
autoflake = "autoflake --in-place . --remove-all-unused-imports --remove-unused-variables --expand-star-imports"
lint = "task isort & task black & task autoflake"
